# nist-sphere

./: .gitignore  Makefile.am  README  README.md  configure.in
include/sp/: sphere.h
include/util/: macros.h  memory.h  utillib.h
lib/: Makefile.am
lib/sp/: Makefile.am  configure.in
lib/sp/src/: Makefile.am  dupfinfo.c  fixio.c  lpc.c  nat_bord.c  poly.c  sdatamod.c  shorten.c  shpacki2.c  shpackio.c  spchksum.c  spclose.c  speof.c  sphere.c  sphio.c  spopen.c  sptell.c  sptemp.c  sputils2.c
lib/util/: Makefile.am  configure.in
lib/util/include/: chars.h
lib/util/src/: Makefile.am  cfg.c  ds.c  maldie.c  order.c  statdist.c  str_srch.c
src/: Makefile.am  array.c  comments.c  exit.c  fobops.c  h_delete.c  h_edit.c  h_fix.c  h_read.c  h_test.c  itoa.c  pad.c  rsprintf.c  sfgets.c  shpack_s.c  sperror.c  spoutput.c  sprstat.c  spseek.c  string.c  tsphere.c  vario.c  w_decode.c
src/lib/sp/: Makefile.am  dif_wavf.c  dupfinfo.c  exit.c  fixio.c  h_fix.c  lpc.c  sdatamod.c  shorten.c  shpack_s.c  spalloc.c  spchksum.c  speof.c  sphere.c  sphio.c  spinput.c  sploadf.c  spoutput.c  spread.c  spvers.c  vario.c
src/lib/util/: Makefile.am  cfg.c  ds.c  hist.c  rsprintf.c  statdist.c
src/sp/: Makefile.am  dif_wavf.c  exit.c  nat_bord.c  shpacki2.c  shpackio.c  sp_ntoh.c  sp_utils.c  spalloc.c  spclose.c  sperror.c  spinput.c  sploadf.c  spopen.c  spread.c  sprewind.c  sprstat.c  spseek.c  sptell.c  sputils2.c  spvers.c  spwrite.c  stdfield.c  verbose.c  wavedit.c  wavpack.c
src/util/: Makefile.am  err_util.c  fobops.c  hist.c  hsgetopt.c  mtrf.c  order.c  pad.c  str_srch.c  string.c  t_or_f.c  word.c
