AC_INIT([sphere],[2.6])
AM_INIT_AUTOMAKE([foreign])

AC_PROG_CC
AC_PROG_RANLIB

AC_SUBST(OS,`uname -s`)
AC_SUBST(ARCH,`uname -m`)

AC_OUTPUT([lib/Makefile
           lib/util/Makefile
           lib/util/src/Makefile
           lib/sp/Makefile
           lib/sp/src/Makefile
           src/Makefile
           Makefile])
